[gd_scene load_steps=4 format=2]

[ext_resource path="res://TileSet/Tiles/City_10.png" type="Texture" id=1]
[ext_resource path="res://TileSet/Tiles/City_11.png" type="Texture" id=2]
[ext_resource path="res://Clouds/Cloud.gd" type="Script" id=3]

[node name="Cloud" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -32, -1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 32, -1 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( -29, -15, -5, -17, 13, -20, 29, -25, 45, -18, 56, -4, 57, 5, 49, 12, 39, 16, 21, 17, 13, 15, 0, 17, -22, 17, -28, 17, -33, 19, -38, 20, -49, 16, -50, 10, -45, -1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
